fix spacing Timeline

--- a/app/globals.css
+++ b/app/globals.css
@@ -135,12 +135,24 @@
 
 /* Timeline */
 @keyframes moveline {
-  0%{
+0%{
       height: 0;
-      }
+  }
+  20%{
+      height: 10%;
+  }
+  40%{
+      height: 30%;
+  }
+  60%{
+      height: 40%;
+  }
+  80%{
+      height: 50%;
+  }
   100%{
       height: 100%;
-      }
+  }
 }
 
 @keyframes movedown {
@@ -170,7 +182,7 @@ top: 0;
 left: 50%;
 margin-left: -3px;
 z-index: 1;
-animation: moveline 6s linear forwards;
+animation: moveline 12s linear forwards;
 }
 
 
